# chara

./: .gitignore  CMakeLists.txt  LICENSE  README.md  testenv.sh
src/: byte.cc  byte.h  byte_buffer.cc  byte_buffer.h  chara.cc  concurrency_proxy.h  dns.h  karma.cc  karma.h  session.cc  session.h  tcp_session.cc  tcp_session.h  udp_session.cc  udp_session.h
src/core/: dns_resolver.cc  dns_resolver.h  karma.cc  karma.h  tcp_session.cc  tcp_session.h  udp_session.cc  udp_session.h
src/protocol/: dns.h  dns_domain_name.cc  dns_domain_name.h  dns_header.cc  dns_header.h  dns_origin.cc  dns_origin.h  dns_packet.cc  dns_packet.h  dns_query.cc  dns_query.h  dns_rdata.cc  dns_rdata.h  dns_resolver.cc  dns_resolver.h  dns_resource_record.cc  dns_resource_record.h  dnsds.h
src/utils/: byte.h  byte_buffer.cc  byte_buffer.h  concurrency_proxy.h  net_assist.h  noncopyable.h  streambuf_guard.h  test_assist.h
